# rapid2

./: .gitignore  .pymarkdown.yml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLI_STYLE.md  CODE_OF_COLLAB.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  NOMENCLATURE.md  README.md  SANDBOX.md  STYLE.md  TESTING.md  TUTORIAL.md  clean.sh  pyproject.toml  requirements.apt  requirements.pip
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  enhancement.yml
.github/workflows/: CD.yml  CI.yml  CL.yml  CP.yml  github_actions_CD.yml
src/: Qou_mdt.py  _cmpncf.py  _cpllsm.py  _dgldas2.py  _m3rivtoqext.py  _rapid2.py  _sandboxqext.py  _zeroqinit.py  bas_vec.py  ccc_mat.py  con_vec.py  fak_m3r.py  hsh_tbl.py  k_x_vec.py  m3r_mdt.py  net_mat.py  rte_mat.py  stp_cor.py
src/rapid2/: Qex_mdt.py  Qex_new.py  Qfi_mdt.py  Qfi_new.py  Qou_mdt.py  Qou_new.py  __init__.py  bas_vec.py  ccc_mat.py  chck_bas.py  chck_cpl.py  chk_cpl.py  chk_ids.py  chk_top.py  con_vec.py  cpl_chk.py  cpl_vec.py  crd_vec.py  fak_m3r.py  hsh_tbl.py  idx_tbl.py  inv_mat.py  k_x_vec.py  m3r_mdt.py  make_0bi_tbl.py  make_CCC_mat.py  make_Inv_mat.py  make_Mus_mat.py  make_Net_mat.py  make_Wdw_mat.py  mus_int.py  mus_rte.py  net_mat.py  nml_cfg.py  nml_tbl.py  prep_Qex_ncf.py  prep_Qfi_ncf.py  prep_Qou_ncf.py  prep_skl_ncf.py  read_bas_vec.py  (+16 more)
src/rapid2/cli/: _cmpncf.py  _cpllsm.py  _dgldas2.py  _dsandbox.py  _hydrographs.py  _ltir_cor.py  _ltir_scl.py  _m3rivtoqext.py  _rapid1to2.py  _rapid2.py  _sandboxqext.py  _subsampleqout.py  _zeroqinit.py
src/rapid2/core/: calc_scl_vec.py  chck_cpl.py  make_0bi_tbl.py  make_Mus_mat.py  make_Net_mat.py  make_Sel_mat.py  make_Wdw_mat.py  make_Wdx_mat.py  prep_Qex_ncf.py  prep_Qfi_ncf.py  prep_Qou_ncf.py  prep_skl_ncf.py  read_bas_vec.py  read_con_vec.py  read_cpl_vec.py  read_crd_vec.py  read_kpr_vec.py  read_nml_tbl.py  read_riv_vec.py  read_std_vec.py  read_xpr_vec.py  updt_Mus_Qou.py
tst/: tst_dwnl_Sandbox.sh
