# *****************************************************************************
# pyproject.toml
# *****************************************************************************

# Purpose:
# This file acts as a Python project configuration file for packaging-related
# tools and for other tools.
# Author:
# Cedric H. David, 2025-2025


# *****************************************************************************
# Project configuration
# *****************************************************************************
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rapid2"
version = "2.0.0.dev1"
license = {file = "LICENSE"}
description = "Routing Application for Programmed Integration of Discharge"
authors = [{name = "Cedric H. David", email = "cedric.david@jpl.nasa.gov"}]
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/c-h-david/rapid2.git"

[project.scripts]
rapid2 = "_rapid2:main"
dgldas2 = "_dgldas2:main"
m3rivtoqext = "_m3rivtoqext:main"
zeroqinit = "_zeroqinit:main"
sandboxqext = "_sandboxqext:main"
cpllsm = "_cpllsm:main"
cmpncf = "_cmpncf:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.pip"]}

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["build"]


# *****************************************************************************
# End
# *****************************************************************************
