# *****************************************************************************
# pyproject.toml
# *****************************************************************************

# Purpose:
# This file acts as a Python project configuration file for packaging-related
# tools and for other tools.
# Author:
# Cedric H. David, 2025-2025


# *****************************************************************************
# Project configuration
# *****************************************************************************
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rapid2"
version = "2.0.0.dev1"
license = {file = "LICENSE"}
readme = "README.md"
description = "Routing Application for Programmed Integration of Discharge"
authors = [{name = "Cedric H. David", email = "cedric.david@jpl.nasa.gov"}]
dependencies = [
    "netCDF4>=1.7.1.post2",
    "numpy>=2.1.1",
    "scipy>=1.14.1",
    "tqdm>=4.67.1",
    "earthaccess>=0.14.0",
    "pyyaml>=6.0.3"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "yamllint",
    "hadolint-bin"
]

[project.urls]
Repository = "https://github.com/c-h-david/rapid2.git"

[project.scripts]
rapid2 = "_rapid2:main"
dgldas2 = "_dgldas2:main"
m3rivtoqext = "_m3rivtoqext:main"
zeroqinit = "_zeroqinit:main"
sandboxqext = "_sandboxqext:main"
cpllsm = "_cpllsm:main"
cmpncf = "_cmpncf:main"

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["build"]


# *****************************************************************************
# End
# *****************************************************************************
