# *****************************************************************************
# pyproject.toml
# *****************************************************************************

# Purpose:
# This file acts as a Python project configuration file for packaging-related
# tools and for other tools.
# Author:
# Cedric H. David, 2025-2025


# *****************************************************************************
# Project configuration
# *****************************************************************************
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rapid2"
version = "2.0.0.dev1"
license = {file = "LICENSE"}
readme = "README.md"
description = "Routing Application for Programmed Integration of Discharge"
authors = [{name = "Cedric H. David", email = "cedric.david@jpl.nasa.gov"}]
keywords = [
    "river",
    "network",
    "routing",
    "hydrology",
    "muskingum",
    "discharge",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Hydrology",
]

dependencies = [
    "netCDF4>=1.7.2",
    "numpy>=2.4.4",
    "scipy>=1.14.1",
    "tqdm>=4.67.1",
    "earthaccess>=0.14.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pymarkdownlnt",
    "yamllint",
    "hadolint-bin",
    "ruff",
    "mypy",
    "types-PyYAML",   # <--- Adds mypy support for pyyaml
    "scipy-stubs",    # <--- Adds mypy support for scipy.sparse
    "types-tqdm",     # <--- Adds mypy support for tqdm
]

[project.urls]
Repository = "https://github.com/c-h-david/rapid2.git"

[project.scripts]
rapid2 = "rapid2.cli._rapid2:main"
dgldas2 = "rapid2.cli._dgldas2:main"
m3rivtoqext = "rapid2.cli._m3rivtoqext:main"
zeroqinit = "rapid2.cli._zeroqinit:main"
sandboxqext = "rapid2.cli._sandboxqext:main"
cpllsm = "rapid2.cli._cpllsm:main"
cmpncf = "rapid2.cli._cmpncf:main"

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["build"]


# *****************************************************************************
# End
# *****************************************************************************
